Ajustes de imagen

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -376,7 +376,7 @@ li > a:only-child:after { content: ''; }
 
 /*-- banner --*/
 .banner {
-    background: url(./images/banner.jpg)no-repeat center;
+    background: url(../images/playa.jpg)no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
