--- a/src/main/webapp/css/bootstrap.css
+++ b/src/main/webapp/css/bootstrap.css
@@ -561,6 +561,14 @@ pre code {
   margin-left: auto;
 }
 
+.containerDetalle {
+  width: 90%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
 @media (min-width: 576px) {
   .container {
     max-width: 540px;
